# site-gpt

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 09cf9d60fd13_extra_document.py  1ad5000257e6_index.py  20a8a1bc864f_history.py  2a719698d131_update_user_role_and_company_use_date.py  45d15e5ede56_website.py  7e34b3d80b73_init_tables.py  b954e1c9dae1_website.py  bc14c17863ee_add_fields.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.less  App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: Chat.tsx  CompanyTable.tsx  Layout.tsx  UserTable.tsx  WebsiteTable.tsx
frontend/src/context/: AuthContext.tsx  ChatContext.tsx
frontend/src/pages/: Dashboard.tsx  ExtraDocuments.tsx  Login.tsx  Register.tsx  Users.tsx  WebsiteDetail.tsx  Websites.tsx
frontend/src/types/: api.ts
frontend/src/utils/: api.ts
src/site_gpt/app/: main.py  models.py  worker.py
src/site_gpt/app/api/: company.py  document.py  extra_document.py  routes.py  setting.py  upload.py  user.py  website.py
src/site_gpt/app/core/: auth.py  config.py
src/site_gpt/app/db/: base.py  session.py  vector_store.py
src/site_gpt/app/schemas/: app.py  company.py  document.py  extra_document.py  setting.py  user.py  website.py  website_page.py
src/site_gpt/app/scripts/: widget.js
src/site_gpt/app/services/: crawler.py  ingest.py  llm.py  mail.py  rag.py  redis.py
src/site_gpt/app/utils/: file.py
