[project]
name = "site-gpt"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacky",email = "tdhungit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "langchain (>=1.2.15,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.13,<2.0.0)",
    "langchain-google-genai (>=4.2.1,<5.0.0)",
    "langchain-openrouter (>=0.2.1,<0.3.0)",
    "langchain-groq (>=1.1.2,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "langchain-postgres (>=0.0.17,<0.0.18)",
    "python-jose (>=3.5.0,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pgvector (==0.3.2)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "site_gpt", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
